--- a/Transformer_QR_WORKING.ipynb
+++ b/Transformer_QR_WORKING.ipynb
@@ -2000,6 +2000,13 @@
         }
       ],
       "source": [
+        "'''\n",
+        "\n",
+        "\n",
+        "The commneted code is limit order book data\n",
+        "that no longer works becuase I no longer pay to recive the data.\n",
+        "\n",
+        "'''\n",
         "# # Fetch the historical data\n",
         "# api = '74396A9D-6B7D-4024-AD10-583898E8B74A' # coinapi\n",
         "# api_key = \"LiWIDAR596fOH0VCUl3DAdbJw9c5VpBr\" # polygon api\n",
