--- a/Transformer_QR_WORKING.ipynb
+++ b/Transformer_QR_WORKING.ipynb
@@ -14,12 +14,22 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "This project represents a comprehensive exploration into the application of advanced machine learning techniques to predict financial market movements with high precision. Central to our investigation was the deployment of a custom transformer-based sequence-to-sequence model, enhanced through strategic experimentation with additional architectures and methodologies aimed at optimizing predictive accuracy and efficiency. Notably, the project delved into the integration of quantile regression to better capture the distribution of future stock prices, offering a nuanced understanding of potential market directions. Furthermore, the utilization of Fast Fourier Transform (FFT) enabled the extraction of critical frequency domain features, revealing underlying patterns not immediately apparent in the time domain. The incorporation of Convolutional Neural Networks (CNNs) allowed for the effective identification and processing of spatial features within the high-dimensional data, enhancing the model’s ability to learn complex market dynamics. Additionally, the application of fractional differentiation emerged as a pivotal technique, enabling the retention of memory properties in the data while ensuring stationarity, a critical aspect for the model's learning process. Through rigorous experimentation with these architectures and techniques, the project not only pushed the boundaries of predictive modeling in financial markets but also provided valuable insights into the practical application and integration of diverse machine learning strategies."
+        "This project represents a comprehensive exploration into the application of advanced machine learning techniques to predict financial market movements with high precision. Central to our investigation was the deployment of a custom transformer-based sequence-to-sequence model, enhanced through strategic experimentation with additional architectures and methodologies aimed at optimizing predictive accuracy and efficiency. Notably, the project delved into the integration of quantile regression to better capture the distribution of future stock prices, offering a nuanced understanding of potential market directions. I explored, the utilization of Fast Fourier Transform (FFT) for frequency domain features, hopefully revealing underlying patterns not immediately apparent in the time domain. I also explored incorporation of Convolutional Neural Networks (CNNs) allowed for the effective identification and processing of spatial features within the high-dimensional data, enhancing the model’s ability to learn complex market dynamics. Additionally, the experimentation of fractional differentiation emerged as a pivotal technique, enabling the retention of memory properties in the data while ensuring stationarity, a critical aspect for the model's learning process. Through rigorous experimentation with these architectures and techniques, the project not only pushed the boundaries of predictive modeling in financial markets but also provided valuable insights into the practical application and integration of diverse machine learning strategies."
       ],
       "metadata": {
         "id": "NeeFaD_Z_kaj"
       },
       "id": "NeeFaD_Z_kaj"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RKgTx3lwu0Wt"
+      },
+      "id": "RKgTx3lwu0Wt",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
